--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "php-http/httplug": "^1.0 || ^2.0",
-    "php-http/message-factory": "^1.0",
+    "psr/http-factory": "^1.0",
+    "nyholm/psr7": "^1.0",
     "php-http/message": "^1.0",
     "php-http/client-implementation": "^1.0",
     "php-http/discovery": "^1.0",
@@ -29,7 +30,7 @@
   "require-dev": {
     "phpunit/phpunit": "^8.0 || ^9.0",
     "rector/rector": "^1.0",
-    "php-http/guzzle6-adapter": "^1.0",
+    "php-http/guzzle7-adapter": "^1.0",
     "mockery/mockery": "^1.3",
     "nyholm/nsa": "^1.0",
     "php-coveralls/php-coveralls": "^2.4",
